ms-phonebook-example-master/k8s-monitoring-master/nginx-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example
  namespace: nginx-example
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true" # Redirect www to non-www
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <your-domain-name> # Replace with your domain
      secretName: <your-domain-name>-tls # Replace with your domain
  rules:
    - host: <your-domain-name> # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-example
                port:
                  name: http
